// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HSPDetailPanel should change to wrapped and render when wrapped view is clicked 1`] = `
<div>
  <div
    class="hsp-detail-panel__header"
  >
    <h4>
      U6MKN0 · rec full Name · scientific name
    </h4>
    <button
      type="button"
    >
      <svg
        fill="currentColor"
        height="16"
        viewBox="0 0 352 512"
        width="16"
      >
        <path
          d="M243 256l100-100c12-12 12-32 0-45l-22-22a31 31 0 00-45 0L176 189 76 89a31 31 0 00-45 0L9 111a31 31 0 000 45l100 100L9 356a31 31 0 000 45l22 22c13 12 33 12 45 0l100-100 100 100c12 12 32 12 45 0l22-22c12-13 12-33 0-45L243 256z"
        />
      </svg>
    </button>
  </div>
  <div
    class="hsp-detail-panel__body"
  >
    <div
      class="button-group"
    >
      <div
        class="dropdown-container"
      >
        <button
          class="button dropdown tertiary"
          type="button"
        >
          Highlight properties
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="autocomplete-container"
          >
            <span
              class="search-input"
            >
              <input
                data-testid="search-input"
                placeholder="Enter a color scheme"
                type="text"
                value=""
              />
              <span
                class="search-input__suffix"
                data-testid="search-input-suffix"
                role="presentation"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 512 512"
                  width="14"
                >
                  <path
                    d="M505 443L405 343c-4-4-10-7-17-7h-16a208 208 0 10-36 36v16c0 7 3 13 7 17l100 100c9 9 24 9 34 0l28-28c9-10 9-25 0-34zM208 336a128 128 0 110-256 128 128 0 010 256z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="autocomplete-menu"
            >
              <div
                class="dropdown-menu__panel"
              />
            </div>
          </div>
          <div
            class="dropdown-menu__panel"
          >
            <ul
              class=""
            >
              <li
                class=""
              >
                <button
                  class="active"
                  type="button"
                >
                  Clustal
                </button>
              </li>
              <li
                class=""
              >
                <button
                  class=""
                  type="button"
                >
                  Similarity
                </button>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  Physical properties
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Hydrophobicity
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Negative
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Positive
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Charged
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Polar
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Aliphatic
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Aromatic
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  Structural properties
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Buried Index
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Helix Propensity
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Strand Propensity
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Turn Propensity
                    </button>
                  </li>
                </ul>
              </li>
              <li
                class=""
              >
                <button
                  class=""
                  type="button"
                >
                  Serine Threonine
                </button>
              </li>
              <li
                class="branch"
              >
                <button
                  class=""
                  type="button"
                >
                  Other
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Clustal 2
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Cinema
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Lesk
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      MAE
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Taylor
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Zappo
                    </button>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="dropdown-container"
      >
        <button
          class="button dropdown tertiary"
          type="button"
        >
          Select annotation
        </button>
        <div
          class="dropdown-menu"
        >
          <div
            class="autocomplete-container"
          >
            <span
              class="search-input"
            >
              <input
                data-testid="search-input"
                placeholder="Enter a color scheme"
                type="text"
                value=""
              />
              <span
                class="search-input__suffix"
                data-testid="search-input-suffix"
                role="presentation"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 512 512"
                  width="14"
                >
                  <path
                    d="M505 443L405 343c-4-4-10-7-17-7h-16a208 208 0 10-36 36v16c0 7 3 13 7 17l100 100c9 9 24 9 34 0l28-28c9-10 9-25 0-34zM208 336a128 128 0 110-256 128 128 0 010 256z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="autocomplete-menu"
            >
              <div
                class="dropdown-menu__panel"
              />
            </div>
          </div>
          <div
            class="dropdown-menu__panel"
          >
            <ul
              class=""
            >
              <li
                class="branch"
              >
                <button
                  class="active"
                  type="button"
                >
                  U6MKN0
                </button>
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class="active"
                      type="button"
                    >
                      chain
                    </button>
                  </li>
                </ul>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <fieldset
        class="msa-view-choice"
      >
        View:
        <label>
          <input
            checked=""
            name="view"
            type="radio"
          />
          Overview
        </label>
        <label>
          <input
            name="view"
            type="radio"
          />
          Wrapped
        </label>
      </fieldset>
    </div>
    <div>
      <div
        class="alignment-grid alignment-wrapped"
        data-testid="alignment-wrapped-view"
      >
        <div
          class="track-label track-label--align-labels"
        >
          <span
            class="align-label"
          >
            Query
          </span>
          <button
            class="align-label"
            style="height: 20px;"
            tabindex="-1"
            type="button"
          >
            Match:
            <a
              href="/uniprotkb/U6MKN0"
            >
              U6MKN0
            </a>
          </button>
        </div>
        <div
          class="track"
        >
          <protvista-msa
            colorscheme="clustal"
            height="40"
            hidelabel="true"
            length="45"
          />
        </div>
        <span
          class="right-coord"
        >
          <div
            style="height: 20px;"
          >
            31
          </div>
          <div
            style="height: 20px;"
          >
            446
          </div>
        </span>
        <span
          class="track-label annotation-label"
        >
          chain
        </span>
        <div
          class="track annotation-track"
        >
          <protvista-track
            displayend="446"
            displaystart="418"
            length="28"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HSPDetailPanel should initially render overview 1`] = `
<DocumentFragment>
  <div
    class="sliding-panel sliding-panel--bottom hsp-detail-panel"
    style="opacity: 0; margin-right: -1000px;"
  >
    <div>
      <div
        class="hsp-detail-panel__header"
      >
        <h4>
          U6MKN0 · rec full Name · scientific name
        </h4>
        <button
          type="button"
        >
          <svg
            fill="currentColor"
            height="16"
            viewBox="0 0 352 512"
            width="16"
          >
            <path
              d="M243 256l100-100c12-12 12-32 0-45l-22-22a31 31 0 00-45 0L176 189 76 89a31 31 0 00-45 0L9 111a31 31 0 000 45l100 100L9 356a31 31 0 000 45l22 22c13 12 33 12 45 0l100-100 100 100c12 12 32 12 45 0l22-22c12-13 12-33 0-45L243 256z"
            />
          </svg>
        </button>
      </div>
      <div
        class="hsp-detail-panel__body"
      >
        <div
          class="button-group"
        >
          <div
            class="dropdown-container"
          >
            <button
              class="button dropdown tertiary"
              type="button"
            >
              Highlight properties
            </button>
            <div
              class="dropdown-menu"
            >
              <div
                class="autocomplete-container"
              >
                <span
                  class="search-input"
                >
                  <input
                    data-testid="search-input"
                    placeholder="Enter a color scheme"
                    type="text"
                    value=""
                  />
                  <span
                    class="search-input__suffix"
                    data-testid="search-input-suffix"
                    role="presentation"
                  >
                    <svg
                      fill="currentColor"
                      height="14"
                      viewBox="0 0 512 512"
                      width="14"
                    >
                      <path
                        d="M505 443L405 343c-4-4-10-7-17-7h-16a208 208 0 10-36 36v16c0 7 3 13 7 17l100 100c9 9 24 9 34 0l28-28c9-10 9-25 0-34zM208 336a128 128 0 110-256 128 128 0 010 256z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="autocomplete-menu"
                >
                  <div
                    class="dropdown-menu__panel"
                  />
                </div>
              </div>
              <div
                class="dropdown-menu__panel"
              >
                <ul
                  class=""
                >
                  <li
                    class=""
                  >
                    <button
                      class="active"
                      type="button"
                    >
                      Clustal
                    </button>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Similarity
                    </button>
                  </li>
                  <li
                    class="branch"
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Physical properties
                    </button>
                    <ul
                      class=""
                    >
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Hydrophobicity
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Negative
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Positive
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Charged
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Polar
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Aliphatic
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Aromatic
                        </button>
                      </li>
                    </ul>
                  </li>
                  <li
                    class="branch"
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Structural properties
                    </button>
                    <ul
                      class=""
                    >
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Buried Index
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Helix Propensity
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Strand Propensity
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Turn Propensity
                        </button>
                      </li>
                    </ul>
                  </li>
                  <li
                    class=""
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Serine Threonine
                    </button>
                  </li>
                  <li
                    class="branch"
                  >
                    <button
                      class=""
                      type="button"
                    >
                      Other
                    </button>
                    <ul
                      class=""
                    >
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Clustal 2
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Cinema
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Lesk
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          MAE
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Taylor
                        </button>
                      </li>
                      <li
                        class=""
                      >
                        <button
                          class=""
                          type="button"
                        >
                          Zappo
                        </button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            class="dropdown-container"
          >
            <button
              class="button dropdown tertiary"
              type="button"
            >
              Select annotation
            </button>
            <div
              class="dropdown-menu"
            >
              <div
                class="autocomplete-container"
              >
                <span
                  class="search-input"
                >
                  <input
                    data-testid="search-input"
                    placeholder="Enter a color scheme"
                    type="text"
                    value=""
                  />
                  <span
                    class="search-input__suffix"
                    data-testid="search-input-suffix"
                    role="presentation"
                  >
                    <svg
                      fill="currentColor"
                      height="14"
                      viewBox="0 0 512 512"
                      width="14"
                    >
                      <path
                        d="M505 443L405 343c-4-4-10-7-17-7h-16a208 208 0 10-36 36v16c0 7 3 13 7 17l100 100c9 9 24 9 34 0l28-28c9-10 9-25 0-34zM208 336a128 128 0 110-256 128 128 0 010 256z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="autocomplete-menu"
                >
                  <div
                    class="dropdown-menu__panel"
                  />
                </div>
              </div>
              <div
                class="dropdown-menu__panel"
              >
                <ul
                  class=""
                >
                  <li
                    class="branch"
                  >
                    <button
                      class="active"
                      type="button"
                    >
                      U6MKN0
                    </button>
                    <ul
                      class=""
                    >
                      <li
                        class=""
                      >
                        <button
                          class="active"
                          type="button"
                        >
                          chain
                        </button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <fieldset
            class="msa-view-choice"
          >
            View:
            <label>
              <input
                checked=""
                name="view"
                type="radio"
              />
              Overview
            </label>
            <label>
              <input
                name="view"
                type="radio"
              />
              Wrapped
            </label>
          </fieldset>
        </div>
        <div>
          <section
            class="alignment-grid"
            data-testid="alignment-view"
          >
            <span
              class="track-label"
            >
              Overview
            </span>
            <div
              class="track"
            >
              <div>
                <protvista-track
                  height="15"
                  highlight="418:446"
                  layout="non-overlapping"
                  length="486"
                />
                <protvista-track
                  height="15"
                  highlight="418:446"
                  layout="non-overlapping"
                  length="486"
                />
              </div>
            </div>
            <span
              class="track-label"
            >
              chain
            </span>
            <div
              class="track"
            >
              <protvista-track
                highlight="418:446"
                layout="non-overlapping"
                length="486"
              />
            </div>
            <div
              class="track-label track-label--align-labels"
            >
              <span
                class="align-label"
              >
                Query
              </span>
              <button
                class="align-label"
                style="height: 20px;"
                tabindex="-1"
                type="button"
              >
                Match:
                <a
                  href="/uniprotkb/U6MKN0"
                >
                  U6MKN0
                </a>
              </button>
            </div>
            <div
              class="track"
            >
              <protvista-manager
                attributes="displaystart displayend"
                displayend="28"
                displaystart="1"
              >
                <protvista-navigation
                  length="28"
                />
                <protvista-msa
                  colorscheme="clustal"
                  height="40"
                  hidelabel="true"
                  length="28"
                />
              </protvista-manager>
            </div>
            <span
              class="right-coord"
            >
              <div
                style="height: 20px;"
              >
                28
              </div>
              <div
                style="height: 20px;"
              >
                28
              </div>
            </span>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
